--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Quicksand-Regular', sans-serif;
+  font-family: 'Quicksand-Regular';
   font-weight: 400;
   font-style: normal;
   src: local('Quicksand-Regular'),
@@ -12,7 +12,7 @@
   /* при таком подключении это всё обязательно
   если такого шрифта нет на компе то тогла он будет с тырнета.
   И чтобы не было проблем с контетом мы скачиваем шрифты*/
-  font-family: 'Quicksand-Medium', sans-serif;
+  font-family: 'Quicksand-Medium';
   font-weight: 500;
   font-style: normal;
   src: local('Quicksand-Medium'),
@@ -24,7 +24,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto-Regular', sans-serif;
+  font-family: 'Roboto-Regular';
   font-weight: 400;
   font-style: normal;
   src: local('Roboto-Regular'),
@@ -33,7 +33,7 @@
   font-display: swap;
 }
 @font-face {
-  font-family: 'Roboto-Bold', sans-serif;
+  font-family: 'Roboto-Bold';
   font-weight: 700;
   font-style: normal;
   src: local('Roboto-Bold'),
