--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -46,3 +46,48 @@ a {
   max-width: 570px;
   margin: 0 auto 55px;
 }
+
+.breadcrumbs {
+  display: inline-flex;
+  justify-content: center;
+  padding-left: 25px;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: '';
+    background-image: url('../images/icon/home_icon.svg');
+    width: 16px;
+    height: 16px;
+    left: 0;
+    top: 4px;
+  }
+  &__list {
+    display: flex;
+  }
+  &__item {
+    color: #727272;
+    padding-right: 40px;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      background-image: url('../images/icon/angle_right.svg');
+      width: 9px;
+      height: 10px;
+      right: 15px;
+      top: 9px;
+      /* в этом случае right: 15px; т.к. у нас может добавляться странички и ссылки будут добаляться справа и могут налазить на стрелочки, а так стрелочки от пихнем влево, как нам и надо */
+    }
+    &:last-child {
+      color: $accent;
+      padding-right: 0;
+      &::after {
+        display: none;
+        /* чтобы у последнего элемента не было стрелочек */
+      }
+    }
+  }
+  &__link {
+    color: inherit;
+  }
+}
