--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -143,6 +143,20 @@
   }
 }
 
+/* .top заготовка для других страничек типа Логина */
+.top {
+  &__container {
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 120px 130px;
+    text-align: center;
+  }
+}
+
+
 .footer-bottom {
   height: 75px;
   display: flex;
@@ -657,6 +671,55 @@
 }
 
 
-
+/* LOGIN */
+.modal {
+  padding-top: 100px;
+  max-width: 570px;
+  margin: 0 auto 115px;
+  &__links {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  &__link {
+    color: #909090;
+    font-size: 22px;
+    @extend %roboto-400;
+    text-transform: uppercase;
+    margin: 0 30px;
+  }
+  &__link--active {
+    color: $accent;
+    /* очень полезно такие выделания здавать отдельным классом т.к. вруг изменят ссылку на спан или еще, что-то то класс с цветом останется в любм случае */
+  }
+  &__label {
+    margin-bottom: 30px;
+    display: block;
+  }
+  &__input {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: $bg;
+    margin-top: 4px;
+    padding: 0 15px;
+    height: 60px;
+  }
+  &__btn {
+    display: block;
+    background-color: $title;
+    text-transform: uppercase;
+    color: #fff;
+    @extend %roboto-400;
+    padding: 14px 0;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+  }
+  &__error {
+    margin-top: 12px;
+    color: $accent;
+    display: inline-block;
+  }
+}
 
 @import 'media';
