--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,6 @@
 @import '../../node_modules/slick-carousel/slick/slick.scss';
 @import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
-@import 'node_modules/rateyo/src/jquery.rateyo';
+@import '../../node_modules/rateyo/src/jquery.rateyo';
+@import '../../node_modules/ion-rangeslider/css/ion.rangeSlider';
+@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler';
+//@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme'; чтобы полностью удалить нужно в папке стилей удалить style.min.css он при новом запуске Галпа создаца только уже без этих свойств formstyler.theme т.к. после он нужен только на моент когда создаем стили для селекта
