--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1140,8 +1140,8 @@ display: none;
 
 /* product-page */
 .product-page {
-  padding: 120px 0 60px;
-  border-bottom: 1px solid #f0f0f0;
+  padding: 120px 0 0px;
+
 }
 
 .product-one {
@@ -1372,5 +1372,195 @@ display: none;
     display: inline-block;
   }
 }
+
+
+/* product-tabs */
+
+.product-tabs {
+  padding-top: 110px;
+  &__top {
+    border-bottom: 1px solid #f0f0f0;
+    margin-bottom: 40px;
+    @extend %roboto-400;
+    font-size: 22px;
+  }
+  &__top-item {
+    margin-bottom: 10px;
+    display: inline-block;
+    &+ .product-tabs__top-item {
+      margin-left: 55px;
+    }
+  }
+  &__top-item--active {
+    color: $title;
+    position: relative;
+    &::before {
+      position: absolute;
+      content: '';
+      bottom: -11px;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $accent;
+    }
+  }
+  &__content-item {
+    display: none;
+    &.product-tabs__content-item--active {
+      display: block;
+    }
+  }
+}
+
+.commets {
+  margin-bottom: 40px;
+  display: flex;
+  &__img {
+    min-width: 71px;
+    height: 71px;
+    margin-right: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+
+  &__content-top {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  &__content-name {
+    color: $title;
+    @extend %roboto-400;
+    margin-right: 13px;
+  }
+  &__content-data {
+    padding-left: 13px;
+    position: relative;
+    &::before {
+      position: absolute;
+      content: "";
+      width: 1px;
+      height: 13px;
+      background-color: $default;
+      left: 0;
+      top: 5px;
+    }
+  }
+  &__content-star {
+    margin-left: auto;
+    margin-right: 0;
+  }
+  &__content-text {
+    margin-bottom: 10px;
+  }
+  &__content-reply {
+    display: inline-block;
+    padding-left: 25px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 7px;
+      background-image: url('../images/icon/reply.svg');
+      width: 15px;
+      height: 13px;
+    }
+  }
+}
+
+
+
+.commets-form {
+  border-bottom: 1px solid #f0f0f0;
+  padding-bottom: 60px;
+  &__title {
+    color: $title;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 35px;
+    padding-bottom: 10px;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      height: 1px;
+      left: 0;
+      bottom: 0;
+      background-color: $accent;
+    }
+  }
+  &__rating {
+    margin-bottom: 30px;
+  }
+  &__rating-title {
+    color: $title;
+    margin-right: 60px;
+  }
+  &__label {
+    padding-right: 25px;
+  }
+  &__input {
+    @extend %radio-hidden;
+    &:checked + .commets-form__radio {
+      path {
+        fill: #ffc35b;
+      }
+    }
+  }
+  &__radio {
+    cursor: pointer;
+    path {
+      fill: $default;
+    }
+  }
+
+  &__box-input {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__text-input {
+    width: 570px;
+    display: inline-block;
+    height: 50px;
+    padding: 0 20px;
+    border: 1px solid #f0f0f0;
+  }
+  &__textarea {
+    border: 1px solid #f0f0f0;
+    padding: 15px 20px;
+    display: block;
+    width: 100%;
+    height: 225px;
+    resize: none;
+    margin-bottom: 40px;
+  }
+  &__btn {
+    border: none;
+    @extend %btn;
+    
+  }
+}
+
+.related {
+  padding: 50px 0 120px;
+  &__title {
+    margin-bottom: 50px;
+  }
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    .product-item__img-box {
+      height: auto;
+    }
+    .product-item__title {
+      padding: 5px 0;
+    }
+  }
+}
+
 
 @import 'media';
