--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -711,30 +711,7 @@
   &__item-box {
     padding: 30px 40px;
   }
-  &__item-info {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  &__item-author,
-  &__item-data {
-    padding-left: 30px;
-    position: relative;
-    &::before {
-      content: '';
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      left: 0;
-      top: 4px;
-    }
-  }
-  &__item-author::before {
-    background-image: url('../images/icon/user-gray.svg');
-  }
-  &__item-data::before {
-  background-image: url('../images/icon/time.svg');
-  }
+
   &__item-title {
     color: $title;
     @extend %roboto-400;
@@ -756,6 +733,33 @@
   }
 }
 
+/* blog-box */
+/* поскольку у нас на сайте будет две секции с блогом, то сделаю один общий модификатор, чтобы монг быо его исползовать на разных страницах */
+.blog-box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  &__author,
+  &__date {
+    padding-left: 30px;
+    position: relative;
+    &::before {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 0;
+    top: 4px;
+  }
+}
+  &__author::before {
+    background-image: url('../images/icon/user-gray.svg');
+  }
+
+  &__date::before {
+    background-image: url('../images/icon/time.svg');
+  }
+}
 
 /* LOGIN */
 .modal {
@@ -1562,5 +1566,196 @@ display: none;
   }
 }
 
+.blog-page {
+  padding: 120px 0 60px;
+  &__item--slider {
+  .blog-page__item-box {
+      margin-top: -8px;
+    }
+  }
+
+  &__slider {
+    /* эти стрлеки, это вложенности и впредачу их беру из кода слайдера в js по этому такая запись */
+    .slick-next,
+    .slick-prev {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 5;
+      width: 40px;
+      height: 40px;
+      background-color: $accent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      outline: none;/* обычно это свойтсво ельщя отключать оно для тех плохо видит */
+      box-shadow: 0px 7px 20xp 0xp rgba(254, 62, 87, 0.3);
+      path {
+        fill: #fff;
+      }
+    }
+    .slick-disabled {
+      background-color: #fff;
+      box-shadow: 0px 7px 20px 0px rgba(168, 168, 168, 0.3);
+      path {
+        fill: $accent;
+      }
+    }
+    .slick-next {
+      right: 40px;
+    }
+    .slick-prev {
+      left: 40px;
+    }
+
+  }
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content {
+    width: 770px;
+    margin-right: 30px;
+  }
+  &__aside {
+    width: 370px;
+  }
+  &__item {
+    margin-bottom: 60px;
+    &.blog-page__item--no-image {
+      /* когда эти два класса вместе. короче такие штучки лучше указывать через модификаторы*/
+      border-top: 1px solid#ececec;
+      box-shadow: 0px 20px 60px 0px rgba(202, 202, 202, 0.35);
+    }
+  }
+  &__item-link {
+    display: block;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    /* потому, что ссылка находится внутри и нужно, чтобы она на себя все унаследовала */
+  }
+  &__img {
+    max-width: 770px;
+    height: 450px;
+    object-fit: cover;
+    display: block;
+  }
+  &__item-box {
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 40px;
+  }
+  &__item-title {
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-700;
+    line-height: 32px;
+    margin-bottom: 20px;
+    transition: all .3s;
+    &:hover {
+      color: $accent;
+    }
+  }
+  .blog-box {
+    /* тут говорит, что окгда этот элемент нутри blog-page т.к. он используется на нескольких страницах */
+    justify-content: start;
+    &__author {
+      margin-right: 30px;
+    }
+  }
+}
+
+.person {
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  text-align: center;
+  padding: 40px 25px;
+  &__img {
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    margin: 0 auto 35px;
+  }
+  &__name {
+    color: $title;
+    font-size: 18px;
+    @extend %roboto-700;
+  }
+  &__position {
+    color: $accent;
+    margin-bottom: 25px;
+  }
+  &__text {
+    margin-bottom: 25px;
+  }
+  &__social-link {
+    margin: 0 8px;
+    path {
+      fill: $default;
+      transition: all .3s;
+    }
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+}
+
+
+.latest-post {
+  padding: 35px 30px 40px;
+  border: 1px solid #ececec;
+  margin-bottom: 40px;
+  &__title {
+    color: $title;
+    text-transform: uppercase;
+    @extend %roboto-400;
+    font-size: 22px;
+    margin-bottom: 35px;
+  }
+  &__item {
+    margin-bottom: 20px;
+    display: flex;
+    & + .latest-post__item {
+      border-top: 1px solid #ececec;
+      padding-top: 20px;
+    }
+  }
+  &__img-link {
+    display: block;
+    margin-right: 20px;
+    min-width: 80px;
+  }
+  &__img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+  }
+  &__title-link {
+    @extend %roboto-400;
+    font-size: 18px;
+    color: $title;
+    line-height: 28px;
+  }
+  &__date {
+    padding-left: 26px;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 5px;
+      background-image: url('../images/icon/calendar.svg');
+      width: 16px;
+      height: 16px;
+    }
+  }
+}
 
 @import 'media';
