fix footer form

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -117,6 +117,9 @@
     font-size: 22px;
     line-height: 1;
   }
+  &__form {
+    display: flex;
+  }
   &__link {
     margin-bottom: 14px;
     display: block;
