--- a/app/index.njk
+++ b/app/index.njk
@@ -9,13 +9,13 @@
 <body>
 {%include 'app/modul/_header/_header.html'%}
   <main class="main">
-  {%include 'app/modul/_top-slider/_top-slider.html'%}
-  {%include 'app/modul/_categories-info/_categories-info.html'%}
-  {%include 'app/modul/_video-fashion/_video-fashion.html'%}
-  {%include 'app/modul/_product/_product.html'%}
-  {%include 'app/modul/_promo/_promo.html'%}
-  {%include 'app/modul/_partners/_partners.html'%}
-  {%include 'app/modul/_blog-index/_blog-index.html'%}
+  {#{%include 'app/modul/_top-slider/_top-slider.html'%} #}
+  {#{%include 'app/modul/_categories-info/_categories-info.html'%} #}
+  {#{%include 'app/modul/_video-fashion/_video-fashion.html'%} #}
+  {#{%include 'app/modul/_product/_product.html'%} #}
+  {#{%include 'app/modul/_promo/_promo.html'%} #}
+  {#{%include 'app/modul/_partners/_partners.html'%} #}
+  {#{%include 'app/modul/_blog-index/_blog-index.html'%} #}
   </main>
 {%include 'app/modul/_footer/_footer.html'%}
   <script src="js/main.min.js"></script>
