--- a/app/blog-one.njk
+++ b/app/blog-one.njk
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/blog-one.min.css">
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
 {%include 'app/modul/_header/_header.html'%}
@@ -111,13 +112,15 @@
 
             <div class="blog-one__author">
               <img class="blog-one__author-img" src="images/blog/author.jpg" alt="">
-              <h5 class="blog-one__author-name">
+              <div class="blog-one__author-info">
+              <div class="blog-one__author-name">
                 JHON DOE
-              </h5>
+              </div>
               <p class="blog-one__author-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo dajsna for tempor incididunt ut labore et dolore
                 magna aliqua. Quis ipsum more in the a mo spendisse ultrices gravida. Risus commodo.
               </p>
+              </div>
             </div>
               <div class="commets-title">02 COMMENTS</div>
               <div class="commets">
