--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -6,3 +6,4 @@
 @import '../modul/_header/header';
 @import '../modul/_footer/footer';
 @import '../modul/_top/top';
+@import '../modul/_product/product';
