--- a/app/modul/_blog-index/_blog-index.scss
+++ b/app/modul/_blog-index/_blog-index.scss
@@ -106,3 +106,61 @@
     background-image: url('../images/icon/time.svg');
   }
 }
+
+@media (max-width: 1235px) {
+  .blog {
+    &__items {
+      &::after {
+        right: 8px;
+      }
+    }
+  }
+}
+@media (max-width: 1235px) {
+  .blog {
+    &__items {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+    }
+    &__item-box {
+      padding: 20px 15px;
+    }
+  }
+}
+@media (max-width: 1050px) {
+  .blog {
+    &__items {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    &__item {
+      max-width: 100%;
+      img {
+        width: 100%;
+      }
+    }
+  }
+}
+@media (max-width: 768px) {
+  .blog {
+    padding: 60px 0;
+    &__items {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+@media (max-width: 375px) {
+.blog-box{
+  display: block;
+  &__date {
+  margin-top: 10px;
+   }
+  }
+  .blog {
+    &__item-img-link {
+      img {
+        height: 220px;
+      }
+    }
+  }
+}
