--- a/app/modul/_promo/_promo.scss
+++ b/app/modul/_promo/_promo.scss
@@ -53,3 +53,38 @@
     margin-top: 55px;
   }
 }
+
+@media(max-width: 620px) {
+  .promo {
+    padding: 60px 0;
+    &__clock {
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    &__clock-item {
+      margin: 20px 35px;
+    }
+  }
+  .partners {
+    padding: 60px 0;
+    &__list {
+      flex-wrap: wrap;
+      justify-content: center;
+      height: auto;
+    }
+  }
+}
+@media(max-width: 450px) {
+  .promo {
+    &__clock {
+      margin-top: 30px;
+    }
+    &__clock-item {
+      margin: 8px;
+    }
+    &__link {
+      margin-top: 30px;
+    }
+  }
+
+}
