--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -52,6 +52,7 @@ a {
   justify-content: center;
   padding-left: 25px;
   position: relative;
+  flex-wrap: wrap;
   &::before {
     position: absolute;
     content: '';
@@ -133,5 +134,18 @@ a {
       background-image: url('../images/icon/arrow_right.svg');
       right: 0;
     }
+  }
+}
+
+@media(max-width: 620px) {
+  .title {
+    font-size: 40px;
+    line-height: 48px;
+  }
+}
+@media(max-width: 375px) {
+  .title {
+    font-size: 32px;
+    line-height: 40px;
   }
 }
