--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -3,8 +3,20 @@
 @import 'reset';
 @import 'libs';
 @import 'global';
+@import '../modul/_header/header';
+@import '../modul/_footer/footer';
 
-
+.top {
+  &__container {
+    max-width: 1700px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    padding: 120px 130px;
+    text-align: center;
+  }
+}
 
 .page-404 {
   padding: 110px 0 120px;
@@ -46,6 +58,9 @@
   &__filters {
     width: 370px;
     margin-right: 30px;
+  }
+  &__filter-btn {
+    display: none;
   }
 }
   .filter {
@@ -1055,7 +1070,7 @@ display: none;
   &__author-img {
     width: 140px;
     height: 140px;
-    margin-bottom: 30px;
+    margin-right: 30px;
     object-fit: cover;
   }
   &__author-name {
